# gra-ros2

./: .gitmodules  README.md  setup_apptainer.sh  tasks.json
apptainer/: README.md  ros_jazzy.def  setup_apptainer.sh
apptainer/carmaker/: Changelog.md  README.md  carmaker.def
bringup/: README.md  startup_tmux.sh
fsai_api/: CMakeLists.txt
fsai_api/scripts/: wheel_speed_controller.py
mission_supervisor/scripts/: autonomous_demo.py  lap_counter.py
path_planning/: README.md
path_planning/scripts/: centreline.py  pathfinder.py  pathfinderOLD.py
perception/src/ultralytics_ros/models/: README.md  model training 2025 doc
simulation/: CMakeLists.txt  README.md  package.xml
simulation/config/: ros_gz_bridge.yaml
simulation/launch/: dynamic_event.launch.py
simulation/models/cones/: cone.sdf.xacro
simulation/models/sensors/: velodyne.xacro
simulation/models/tracks/: acceleration.xacro  skidpad.xacro  track_small.xacro
simulation/models/vehicle/: ads_dv.sdf  ads_dv.xacro  sim_camera.xacro  steering.xacro  wheel.xacro
simulation/src/: ackermann_to_speed_steer.cpp  perfect_SLAM.cpp
