<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>Vehicle simulation package for Leeds Gryphon Racing AI</description>
  <maintainer email="el22a2s@leeds.ac.uk">A. Shehata</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>common_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models/tracks:${prefix}/models/vehicle"/>
  </export>
</package>